# panda

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  generate_all_metrics.sh  mock_backend.py  panda.example.yaml  panda.homeclaw.yaml  panda.test.failover.yaml  panda.test.yaml  panda.yaml  panda.yaml.bak  panda_higress_roadmap.md  test_metrics.py
.github/workflows/: tinygo-plugin-validate.yml
benchmarks/: README.md  payload_chat_min.json  run_proxy_overhead_hyperfine.sh
community-plugins/: README.md
community-plugins/pii-masking-i18n/: Cargo.toml  README.md
community-plugins/pii-masking-i18n/src/: lib.rs
community-plugins/slack-notifier-wasm/: Cargo.toml  README.md
community-plugins/slack-notifier-wasm/relay/: slack_stdin_relay.py
community-plugins/slack-notifier-wasm/src/: lib.rs
crates/panda-config/: Cargo.toml
crates/panda-config/src/: lib.rs
crates/panda-config/tests/: scenario_profiles.rs
crates/panda-pdk/: Cargo.toml
crates/panda-pdk/go/: README.md
crates/panda-pdk/rust/pii_mini/: Cargo.toml
crates/panda-pdk/rust/pii_mini/src/: lib.rs
crates/panda-proxy/: Cargo.toml
crates/panda-proxy/assets/console-ui/: index.html
crates/panda-proxy/assets/console-ui/assets/: index-CV1k20uL.js  index-CmzvHft5.css
crates/panda-proxy/migrations/: 20260202120000_control_plane_ingress.sql  20260205120000_control_plane_ingress_tenant.sql  20260402120000_control_plane_ingress_rate_limit_rps.sql  20260403120000_control_plane_ingress_upstream_to_backend_base.sql  20260404120000_control_plane_ingress_auth_mode.sql
crates/panda-proxy/src/: adapter.rs  adapter_stream.rs  brain.rs  budget_hierarchy.rs  compliance_export.rs  console_oidc.rs  gateway.rs  jwks.rs  lib.rs  mcp.rs  mcp_openai.rs  mcp_stdio.rs  model_failover.rs  route_rps.rs  semantic_cache.rs  sse.rs  tls.rs  tpm.rs  upstream.rs
crates/panda-proxy/src/api_gateway/: control_plane_store.rs  egress.rs  ingress.rs  mod.rs
crates/panda-proxy/src/inbound/: mcp.rs  mcp_http_ingress.rs  mcp_http_remote.rs  mcp_http_tool.rs  mcp_openai.rs  mcp_stdio.rs  mcp_streamable_http.rs  mod.rs
crates/panda-proxy/src/outbound/: adapter.rs  adapter_stream.rs  mod.rs  model_failover.rs  semantic_cache.rs  semantic_routing.rs  sse.rs  upstream.rs
crates/panda-proxy/src/shared/: brain.rs  budget_hierarchy.rs  compliance_export.rs  console_oidc.rs  gateway.rs  jwks.rs  mod.rs  route_rps.rs  tls.rs  tpm.rs
crates/panda-proxy/src/tests/: backend_routing_and_proxy.rs  control_plane_and_streamable_scenarios.rs  dispatch_branches.rs  gateway_workflow.rs
crates/panda-proxy/tests/: mcp_mock_stdio.py
crates/panda-server/: Cargo.toml
crates/panda-server/schemas/: live_trace_ws.v1.schema.json
crates/panda-server/src/: grpc_health.rs  main.rs
crates/panda-server/tests/: observability_startup.rs
crates/panda-wasm/: Cargo.toml
crates/panda-wasm/src/: lib.rs
crates/wasm-plugin-sample/: Cargo.toml
crates/wasm-plugin-sample/src/: lib.rs
crates/wasm-plugin-ssrf-guard/: Cargo.toml  README.md
crates/wasm-plugin-ssrf-guard/src/: lib.rs
deploy/mcp-starters/: .env.example  Dockerfile  README.md  docker-compose.yml  panda.mcp-starter.yaml
docs/: agent_fleet_gap_roadmap.md  ai_routing_strategy.md  architecture_two_pillars.md  compliance_export.md  control_plane_evolution.md  dependency_audit.md  deployment.md  design_api_gateway_and_mcp_gateway.md  design_mcp_control_plane_rust.md  developer_console.md  enterprise_track.md  evolution_phases.md  gateway_backlog_progress.md  gateway_design_completion.md  grpc_ingress_roadmap.md  high_level_design.md  implementation_plan.md  implementation_plan_mcp_api_gateway.md  ingress_tls_acme_catalog.md  integration_and_evolution.md  kong_handshake.md  kong_replacement_program.md  mcp_api_gateway_next_version_backlog.md  mcp_failover_streaming.md  mcp_gateway_phase1.md  mcp_gateway_reference_designs.md  next_control_plane_streamable_mcp.md  openai_api_surface_coverage.md  openclaw_agent_quickstart.md  openclaw_fleet_profile.md  panda_api_gateway_features.md  panda_data_flow.md  panda_scenarios_summary.md  panda_use_cases.md  panda_vs_kong_positioning.md  protocol_evolution.md  provider_adapters.md  provider_gemini_bedrock_vertex.md  security_review_gate.md  standalone_deployment.md  (+7 more)
docs/grafana/: ingress_gateway_slo.json  panda_agent_fleet.json  recording_rules.agent_fleet.yaml
docs/runbooks/: agent_fleet_oncall.md  control_plane_postgres_external_writes.md  ingress_gateway_slo.md  production_slo.md
examples/: README.md
examples/gateway_mcp_e2e/: README.md  mock_corp_api.py  panda.e2e.yaml.template
examples/mcp_stdio_minimal/: README.md  server.py
examples/tinygo-plugin/: README.md  go.mod
examples/tinygo-plugin-pci-guard/: README.md  go.mod  main.go  panda_pdk.go
grafana/: README.md  panda_agent_fleet.json  recording_rules.agent_fleet.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  secret.example.yaml  service.yaml
panda-mcp-registry/: README.md
panda-mcp-registry/common/: mcp_stdio.py
panda-mcp-registry/github-issues/: README.md  server.py
panda-mcp-registry/google-workspace/: README.md  server.py
panda-mcp-registry/local-rag-lite/: README.md  server.py
panda-mcp-registry/postgres/: README.md  server.py
panda-mcp-registry/slack-discord/: README.md  server.py
panda_site/: architecture.html  deployment.html  extensibility.html  features.html  index.html  mcp.html  observability.html  quickstart.html  roadmap.html  script.js  security.html  styles.css
panda_site/assets/: architecture.mmd  dataflow.mmd  render_architecture.html  render_dataflow.html
samples/tinygo-plugin/: README.md  main.go  panda_pdk.go
scripts/: chaos_monkey_streaming.sh  gateway_mcp_e2e_smoke.sh  gateway_mcp_integration_tests.sh  load_profile_chat.sh  otlp_smoke.sh  release_repro_build.sh  run_cargo_audit.sh  soak_guard_sse.sh  staging_readiness_gate.sh  tpm_redis_failover_soak.sh  validate_tinygo_pci_plugin.sh  validate_tinygo_plugin.sh
ui/panda-console/: index.html  package-lock.json  package.json  vite.config.ts
(+9 files in other folders)
