[package]
name = "wasm-plugin-slack-notify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Community Wasm: flag high-cost chat requests via headers (Slack via external relay/logs)"

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-pdk = { path = "../../crates/panda-pdk" }
