[package]
name = "panda-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP proxy engine: listener, forwarding, future SSE and middleware"

[dependencies]
aho-corasick = "1"
anyhow = "1"
bytes = "1"
constant_time_eq = "0.4"
hmac = "0.12"
http-body-util = "0.1"
http = "1"
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "webpki-roots", "tls12", "ring"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1"] }
jsonwebtoken = "9"
panda-config = { path = "../panda-config" }
panda-wasm = { path = "../panda-wasm" }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiktoken-rs = "0.5"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
wat = "1"
