[package]
name = "panda-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Wasm plugin host (Phase 2) — Wasmtime and ABI land here"

[dependencies]
anyhow = "1"
http = "1"
wasmtime = "43"

[dev-dependencies]
tempfile = "3"
wat = "1"
