[package]
name = "wasm-plugin-sample"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Minimal Wasm guest for Panda plugin smoke tests (wasm32-unknown-unknown)"

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-pdk = { path = "../panda-pdk" }
