[package]
name = "wasm-plugin-ssrf-guard"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Panda Wasm plugin: reject chat/tool bodies that reference private URLs or dangerous schemes (SSRF guard)"

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-pdk = { path = "../panda-pdk" }
