[package]
name = "wasm-plugin-pii-mini"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust PDK example: ~25-line request-body PII redaction (wasm32 cdylib)"

[lib]
crate-type = ["cdylib"]

[dependencies]
panda-pdk = { path = "../.." }
